fixing overflowing text

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,7 +181,7 @@
 }
 .work .prez p{
   padding: 0 20px;
-  max-width: 500px;
+  max-width: 750px;
   margin: auto;
   text-align: justify;
 }
